--- a/package.json
+++ b/package.json
@@ -1,33 +1,19 @@
 {
-  "name": "blueprint-ai",
-  "version": "0.1.0",
+  "name": "blueprint-ai-monorepo",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
-  },
-  "dependencies": {
-    "clsx": "^2.1.1",
-    "gray-matter": "^4.0.3",
-    "next": "16.1.1",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
-    "remark": "^15.0.1",
-    "remark-html": "^16.0.1",
-    "tailwind-merge": "^3.4.0",
-    "zod": "^4.3.5"
+    "build": "turbo build",
+    "dev": "turbo dev",
+    "lint": "turbo lint",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "16.1.1",
-    "tailwindcss": "^4",
-    "turbo": "^2.7.3",
-    "typescript": "^5"
-  }
+    "turbo": "^2.3.3",
+    "prettier": "^3.1.1"
+  },
+  "engines": {
+    "node": ">=18"
+  },
+  "packageManager": "pnpm@9.15.0"
 }
