--- a/packages/opencode-transmute/package.json
+++ b/packages/opencode-transmute/package.json
@@ -2,22 +2,23 @@
   "name": "opencode-transmute",
   "version": "0.1.0",
   "description": "OpenCode plugin for task-based development with git worktrees",
-  "main": "./dist/index.js",
+  "type": "module",
+  "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
-      "require": "./dist/index.js"
+      "require": "./dist/index.cjs"
     }
   },
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "tsup src/index.ts --format cjs,esm --dts",
-    "dev": "tsup src/index.ts --format cjs,esm --dts --watch",
+    "build": "unbuild",
+    "dev": "unbuild --stub",
     "lint": "eslint .",
     "test": "vitest"
   },
@@ -41,9 +42,9 @@
     "@opencode-ai/plugin": "^1.0.0",
     "@repo/typescript-config": "workspace:*",
     "eslint": "^9.0.0",
-    "tsup": "^8.0.1",
     "typescript": "^5.3.3",
     "typescript-eslint": "^8.0.0",
+    "unbuild": "^3.6.1",
     "vitest": "^1.0.0"
   }
 }
