--- a/packages/opencode-transmute/package.json
+++ b/packages/opencode-transmute/package.json
@@ -18,7 +18,7 @@
     "test:watch": "vitest"
   },
   "dependencies": {
-    "zod": "^3.22.4"
+    "zod": "4.1.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.3",
