--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,7 +24,7 @@
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "tailwind-merge": "^3.4.0",
-    "zod": "^4.3.5",
+    "zod": "4.1.8",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
