--- a/packages/schemas/package.json
+++ b/packages/schemas/package.json
@@ -15,7 +15,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "zod": "^3.22.4"
+    "zod": "4.1.8"
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
