--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -10,8 +10,14 @@
     "eslint": "^9"
   },
   "devDependencies": {
-     "eslint-config-next": "16.1.1",
-     "typescript": "^5",
-     "eslint": "^9"
+    "@eslint/js": "^9.39.2",
+    "eslint": "^9",
+    "eslint-config-next": "16.1.1",
+    "typescript": "^5",
+    "typescript-eslint": "^8.53.1"
+  },
+  "exports": {
+    "./next": "./next.js",
+    "./base": "./base.js"
   }
 }
